--- a/.gitmodules
+++ b/.gitmodules
@@ -29,7 +29,7 @@
 	url = git://github.com/mono/NUnitLite.git
 [submodule "external/buildscripts"]
 	path = external/buildscripts
-	url = git@github.com:Unity-Technologies/monobuildtools.git
+	url = https://github.com:Unity-Technologies/monobuildtools.git
 	branch = unity-master-staging
 [submodule "external/nuget-buildtasks"]
 	path = external/nuget-buildtasks
