--- a/msvc/libmonoruntime.vcxproj
+++ b/msvc/libmonoruntime.vcxproj
@@ -29,7 +29,10 @@
     <None Include="..\mono\metadata\Makefile.am" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\mono\metadata\oop.c" />
+    <ClCompile Include="..\mono\metadata\unity-memory-info.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\mono\metadata\unity-memory-info.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{C36612BD-22D3-4B95-85E2-7FDC4FC5D739}</ProjectGuid>
