--- a/mono/mini/Makefile.am.in
+++ b/mono/mini/Makefile.am.in
@@ -561,8 +561,8 @@ common_sources = \
 	type-checking.c \
 	lldb.h			\
 	lldb.c	\
-	pmip_my_callstack.h	\
-	pmip_my_callstack.c \
+	mixed_callstack_plugin.h	\
+	mixed_callstack_plugin.c	\
 	memory-access.c	\
 	mini-profiler.c 
 
