--- a/msvc/libmini-unity.targets.filters
+++ b/msvc/libmini-unity.targets.filters
@@ -4,6 +4,12 @@
     <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-unity.c">
       <Filter>Source Files$(MonoMiniFilterSubFolder)\unity</Filter>
     </ClCompile>
+    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mixed_callstack_plugin.h">
+      <Filter>Header Files$(MonoMiniFilterSubFolder)\common</Filter>
+    </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mixed_callstack_plugin.c">
+      <Filter>Source Files$(MonoMiniFilterSubFolder)\common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files$(MonoMiniFilterSubFolder)\unity">
